// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableComponent accepts a function to format values 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Formatted:
              <strong>
                John
              </strong>
            </td>
          </tr>
          <tr>
            <td>
              Formatted:
              <strong>
                Paul
              </strong>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent can accept a function to fetch the data 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent can add extra classes to the table, the cells and the headers 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table my-table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort my-header"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td class="my-cell">
              John
            </td>
          </tr>
          <tr>
            <td class="my-cell">
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent can display a custom message when filtering results in no results 1`] = `

<div id="app">
  <div class="table-component"
       extra-settings="[object Object]"
  >
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <a class="table-component__filter__clear">
        ×
      </a>
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </div>
    <div class="table-component__message">
      There are no matching rows
    </div>
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent can display a custom placeholder in the filter field 1`] = `

<div id="app">
  <div class="table-component"
       extra-settings="[object Object]"
  >
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <a class="table-component__filter__clear">
        ×
      </a>
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </div>
    <div class="table-component__message">
      There are no matching rows
    </div>
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent can display nested properties 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent can mount 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent can render pagination when the server responds with pagination data 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <nav>
      <ul class="pagination justify-content-center">
        <li class="page-item">
          <a class="page-link">
            1
          </a>
        </li>
        <li class="page-item active">
          <a class="page-link">
            2
          </a>
        </li>
        <li class="page-item">
          <a class="page-link">
            3
          </a>
        </li>
        <li class="page-item">
          <a class="page-link">
            4
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>

`;

exports[`TableComponent clicking a link in the pagination will rerender the table 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John 1
            </td>
          </tr>
          <tr>
            <td>
              Paul 1
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <nav>
      <ul class="pagination justify-content-center">
        <li class="page-item active">
          <a class="page-link">
            1
          </a>
        </li>
        <li class="page-item">
          <a class="page-link">
            2
          </a>
        </li>
        <li class="page-item">
          <a class="page-link">
            3
          </a>
        </li>
        <li class="page-item">
          <a class="page-link">
            4
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>

`;

exports[`TableComponent clicking a link in the pagination will rerender the table 2`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John 3
            </td>
          </tr>
          <tr>
            <td>
              Paul 3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <nav>
      <ul class="pagination justify-content-center">
        <li class="page-item">
          <a class="page-link">
            1
          </a>
        </li>
        <li class="page-item">
          <a class="page-link">
            2
          </a>
        </li>
        <li class="page-item active">
          <a class="page-link">
            3
          </a>
        </li>
        <li class="page-item">
          <a class="page-link">
            4
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>

`;

exports[`TableComponent has an prop to disable the caption 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <!---->
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent has an prop to disable the filter 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent supports a scoped slot inside the table column 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder="Filter table…"
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John slot
            </td>
          </tr>
          <tr>
            <td>
              Paul slot
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent will use the property name as a column heading if label is not set 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              firstName
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;

exports[`TableComponent won't use the property name as a column heading if label is an empty string 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead>
          <tr>
            <th role="columnheader"
                scope="col"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
    <!---->
  </div>
</div>

`;
